# football-fan-api

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .htmlhintrc  Justfile  README.md  docker-compose.yaml  skills-lock.json
.cursor/rules/: agents-golang-skills.mdc  python-cybersecurity-tool-development-assistant.mdc
.github/workflows/: ci.yml  super-linter.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  doc.go  go.mod
api/cmd/server/: main.go
api/internal/config/: config.go
api/internal/db/: schema.go  store.go  subscribers.go
api/internal/httpapi/: server.go  server_test.go
api/internal/migrate/: migrate.go
api/internal/migrate/sql/: 000001_init_schema.up.sql  000002_seed_leagues_teams.up.sql  000003_team_competitions_from_legacy.up.sql  000004_ticket_sales.up.sql  000005_ticket_announcements_text.up.sql  000006_subscribers.up.sql
api/internal/validate/: dates.go  dates_test.go  instant_range.go  instant_range_test.go  ticket_url.go  ticket_url_test.go
bots/telegram/: .env.example  Dockerfile  doc.go  go.mod  go.sum
bots/telegram/cmd/bot/: main.go
bots/telegram/internal/apiclient/: client.go
scrappers/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
scrappers/src/football_scrapers/: __init__.py  __main__.py  espn.py  flamengo_tickets.py  http_client.py  normalize.py  schema.py  soccerway.py  storage.py  ticket_parse.py  tickets.py
scrappers/tests/: test_espn_metadata.py  test_normalize.py  test_soccerway.py  test_ticket_parse.py
scrappers/tests/fixtures/: soccerway_sample.html
(+7 files in other folders)
