[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football-scrapers"
version = "0.1.0"
description = "Periodic scrapers for Brazilian football fixtures (ESPN, Soccerway)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "psycopg[binary]>=3.2.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
football-scrapers = "football_scrapers.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/football_scrapers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
